--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
         <title>JBC!</title>
      </head>
      <body>
-     Hello, world, Hello again. Welcome To JBC's Enterprise "The Kingdom Of Delight"
+     Hello, Welcome To JBC's Enterprise "The Kingdom Of Delight"
      </body>
 </html>
